<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartRing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_db">Database</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="measure">Measure</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>

    <string-array name="titles">
        <item>@string/measure</item>
        <item>@string/analysis</item>
        <item>@string/settings</item>
    </string-array>

    <string name="title_activity_measure">MeasureActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_fragment_measure_one">One</string>
    <string name="title_fragment_measure_series">Series</string>
    <string name="report">Report</string>
    <string name="tv_pulse">Pulse and Count</string>
    <string name="nfc_state">NFC State</string>
    <string name="user">User</string>
    <string name="key_user">key_user</string>
    <string name="reminder">Reminder</string>
    <string name="key_reminder">key_reminder</string>
    <string name="about_us">About Us</string>
    <string name="share">Share</string>
    <string name="key_name">key_name</string>
    <string name="name">Name</string>
    <string name="name_summary">Enter user name</string>
    <string name="email_summary">Enter user email</string>
    <string name="key_gender">key_gender</string>
    <string name="gender">Gender</string>
    <string name="male_short">M</string>
    <string name="female_short">F</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender_summary">Enter gender for accurate analysis</string>
    <string name="key_frequency">key_frequency</string>
    <string name="frequency">Frequency</string>
    <string name="key_about">about</string>
    <string name="key_faq">faq</string>
    <string name="key_feedback">feedback</string>

    <string-array name="frequency">
        <item>@string/daily</item>
        <item>@string/weekly</item>
        <item>@string/monthly</item>
    </string-array>
    <string-array name="frequency_values">
        <item>@string/freq_daily</item>
        <item>@string/freq_weekly</item>
        <item>@string/freq_monthly</item>
    </string-array>
    <string name="freq_daily">0</string>
    <string name="freq_weekly">1</string>
    <string name="freq_monthly">2</string>

    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="key_time">key_time</string>
    <string name="time">Time</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="key_weight">key_weight</string>
    <string name="weight">Weight</string>
    <string name="weight_unit">lbs</string>
    <string name="weight_summary">Enter weight for accurate analysis</string>
    <string name="key_age">key_age</string>
    <string name="age">Age</string>
    <string name="age_summary">Enter age for accurate analysis</string>
    <string name="key_email">key_email</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rest">Rest</string>
    <string name="active">Active</string>
    <string name="toast_nfc_not_available">NFC is not available</string>
    <string name="dialog_state_title">Choose state</string>
    <string name="dialog_state_pos_txt">Choose</string>
    <string-array name="dialog_state_items">
        <item>@string/rest</item>
        <item>@string/active</item>
    </string-array>
    <string name="dialog_state_content">Your pulse rate is: %1$d</string>
    <string name="ph_name">Enter name in Settings</string>
    <string name="ph_email">Enter email in Settings</string>
    <string name="about_content">This APP is developed by Wei Zhen and Yang Liu for the Smart Ring which can read your heart rate and keep track of the readings.</string>
    <string name="toast_start_reading">Reading pulse rate...</string>
    <string name="toast_stop_reading">Reading stopped</string>
    <string name="noti_title">Smart Ring</string>
    <string name="noti_text">Time to take a look at your heart rate!</string>
    <string name="description">Description</string>
    <string name="range">Your Range / BPM</string>
    <string name="rest_range">60-90</string>
    <string name="moderate_activity">Moderate</string>
    <string name="percent_range_moderate_activity">50%-60%</string>
    <string name="weight_control">Weight control</string>
    <string name="percent_range_weight_control">60%-70%</string>
    <string name="aerobic">Aerobic</string>
    <string name="percent_range_aerobic">70%-80%</string>
    <string name="percent_range_anaerobic">80%-90%</string>
    <string name="anaerobic">Anaerobic</string>
    <string name="notes">- BPM: Beats per Minute \n- MHR: Max Heart Rate</string>
    <string name="analysis">Analysis</string>
    <string name="btn_genrate">Generate range</string>

</resources>
