<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="me.freetymekiyan.smartring.views.ReportFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="108dp"
        android:layout_height="108dp"
        android:src="@drawable/photo" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="username" />

    <TableLayout
        android:id="@+id/tl_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:stretchColumns="0, 1, 2">

        <!--<TableRow>-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_column="1"-->
        <!--android:padding="3dp"-->
        <!--android:text="@string/description" />-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:padding="3dp"-->
        <!--android:text="@string/range" />-->
        <!--</TableRow>-->

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="2dp"-->
        <!--android:background="@color/SecondaryText" />-->

        <TableRow style="@style/table_row">

            <ImageView
                style="@style/iv_table_img"
                android:src="@drawable/rest" />

            <TextView
                style="@style/tv_table_words"
                android:text="@string/rest" />

            <TextView
                style="@style/tv_table_figure"
                android:text="@string/rest_range" />
        </TableRow>

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/SecondaryText" />-->

        <TableRow style="@style/table_row">

            <ImageView
                style="@style/iv_table_img"
                android:src="@drawable/walk" />

            <TextView
                style="@style/tv_table_words"
                android:text="@string/moderate_activity" />

            <TextView
                style="@style/tv_table_figure"
                android:text="@string/percent_range_moderate_activity" />
        </TableRow>

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/SecondaryText" />-->

        <TableRow style="@style/table_row">

            <ImageView
                style="@style/iv_table_img"
                android:src="@drawable/run" />

            <TextView
                style="@style/tv_table_words"
                android:text="@string/weight_control" />

            <TextView
                style="@style/tv_table_figure"
                android:text="@string/percent_range_weight_control" />
        </TableRow>

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/SecondaryText" />-->

        <TableRow style="@style/table_row">

            <ImageView
                style="@style/iv_table_img"
                android:src="@drawable/runfast" />

            <TextView
                style="@style/tv_table_words"
                android:text="@string/aerobic" />

            <TextView
                style="@style/tv_table_figure"
                android:text="@string/percent_range_aerobic" />
        </TableRow>

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/SecondaryText" />-->

        <TableRow style="@style/table_row">

            <ImageView
                style="@style/iv_table_img"
                android:src="@drawable/lift" />

            <TextView
                style="@style/tv_table_words"
                android:text="@string/anaerobic" />

            <TextView
                style="@style/tv_table_figure"
                android:text="@string/percent_range_anaerobic" />
        </TableRow>

    </TableLayout>

    <!--<TextView-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/activity_vertical_margin"-->
    <!--android:text="@string/notes" />-->

    <Button
        android:id="@+id/btn_generate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_bkg_btn_generate"
        android:paddingLeft="@dimen/btn_horizontal_padding"
        android:paddingRight="@dimen/btn_horizontal_padding"
        android:text="@string/btn_genrate"
        android:textColor="@color/selector_txt_color_btn_generate" />

</LinearLayout>
